--- a/index.html
+++ b/index.html
@@ -5,24 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Web Task</title>
     <link rel="stylesheet" href="./stylesheet.css" />
-    <script
-      src="https://kit.fontawesome.com/yourcode.js"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous"
-    ></script>
-    <script async src="//www.google-analytics.com/analytics.js"></script>
+      referrerpolicy="no-referrer"
+    />
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
   </head>
   <body>
+    
     <header>
       <ul class="left">
         <li class="list">Quick Contact</li>
-        <li class="list">+61(0)83766284</li>
-        <li class="list">noreply@envato.com</li>
+        <li class="list"><i class="fa-solid fa-phone"></i> +61 (0) 3 8376 6284</li>
+        <li class="list">
+          <i class="fa-solid fa-envelope"></i> noreply@envato.com
+        </li>
       </ul>
       <ul class="right">
-        <li>
-          <a href="#" title="Facebook"> <i class="icon-facebook"></i></a>
-        </li>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-vimeo-v"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-flickr"></i>
+        <i class="fa-brands fa-pinterest-p"></i>
+        <i class="fa-brands fa-linkedin-in"></i>
+        <i class="fa-solid fa-basketball"></i>
       </ul>
     </header>
 
@@ -31,36 +41,38 @@
     </div>
 
     <ul class="top-bar">
-      <div class="box">
-        <li class="l">Home</li>
-        <li class="l">BeVoyager</li>
+      <div class="box" id="home">
+        <li class="l first" >Home</li>
+        <li class="l second">BeVoyager</li>
       </div>
       <div class="box">
-        <li class="l">About Us</li>
-        <li class="l">Our history</li>
+        <li class="l first">About us</li>
+        <li class="l second">Our history</li>
       </div>
       <div class="box">
-        <li class="l">Blog</li>
-        <li class="l">What's new</li>
+        <li class="l first">Blog</li>
+        <li class="l second">What's new</li>
       </div>
       <div class="box">
-        <li class="l">Places</li>
-        <li class="l">We have been</li>
+        <li class="l first">Places</li>
+        <li class="l second">We have been</li>
       </div>
       <div class="box">
-        <li class="l">Contact</li>
-        <li class="l">Stay in touch</li>
+        <li class="l first">Contact</li>
+        <li class="l second">Stay in touch</li>
       </div>
     </ul>
 
     <div class="content">
       <h1>
-        Discover the wildest and breathtaking corners of the world. You will
-        find here stories from our car journeys.
+        <p class="firstLine">Discover the wildest and breathtaking corners</p>
+        <p class="secondLine">
+          of the world. You will find here stories from our car journeys.
+        </p>
       </h1>
     </div>
 
-    <div class="logo">
+    <div class="arrow-logo">
       <img class="arrow-img" src="./Pics/arrow.png" alt="No pic found" />
     </div>
 
@@ -155,6 +167,10 @@
       </div>
     </div>
 
-    <footer></footer>
+    <footer>
+      <img class="footer-pic" src="./Pics/footer.png" alt="  No pic found" />
+      </footer>
+
+
   </body>
 </html>
