--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
   </head>
   <body>
-    
     <header>
       <ul class="left">
         <li class="list">Quick Contact</li>
-        <li class="list"><i class="fa-solid fa-phone"></i> +61 (0) 3 8376 6284</li>
+        <li class="list">
+          <i class="fa-solid fa-phone"></i> +61 (0) 3 8376 6284
+        </li>
         <li class="list">
           <i class="fa-solid fa-envelope"></i> noreply@envato.com
         </li>
@@ -36,13 +37,14 @@
       </ul>
     </header>
 
+    <div class="stickyheader">
     <div class="logo">
       <img class="logo-img" src="./Pics/logo.png" alt="No pic found" />
     </div>
 
     <ul class="top-bar">
       <div class="box" id="home">
-        <li class="l first" >Home</li>
+        <li class="l first">Home</li>
         <li class="l second">BeVoyager</li>
       </div>
       <div class="box">
@@ -62,6 +64,11 @@
         <li class="l second">Stay in touch</li>
       </div>
     </ul>
+</div>
+
+    <div class="bg">
+      <img src="./Pics/bg.jpg" alt="  No Pic found">
+    </div>
 
     <div class="content">
       <h1>
@@ -77,7 +84,15 @@
     </div>
 
     <div class="pic">
-      <img class="arrow-img" src="./Pics/pic1.jpg" alt="No pic found" />
+      <img class="image" src="./Pics/pic1.jpg" alt="No pic found" />
+      <div class="pic-box">
+        <div class="search sfirst">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <div class="search">
+          <i class="fa-solid fa-link"></i>
+        </div>
+      </div>
     </div>
 
     <div class="container">
@@ -101,7 +116,15 @@
     </div>
 
     <div class="pic">
-      <img class="arrow-img" src="./Pics/pic2.jpg" alt="No pic found" />
+      <img class="image" src="./Pics/pic2.jpg" alt="No pic found" />
+      <div class="pic-box">
+        <div class="search sfirst">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <div class="search">
+          <i class="fa-solid fa-link"></i>
+        </div>
+      </div>
     </div>
 
     <div class="container">
@@ -123,7 +146,15 @@
     </div>
 
     <div class="pic">
-      <img class="arrow-img" src="./Pics/pic3.jpg" alt="No pic found" />
+      <img class="image" src="./Pics/pic3.jpg" alt="No pic found" />
+      <div class="pic-box">
+        <div class="search sfirst">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <div class="search">
+          <i class="fa-solid fa-link"></i>
+        </div>
+      </div>
     </div>
 
     <div class="container">
@@ -147,7 +178,15 @@
     </div>
 
     <div class="pic">
-      <img class="arrow-img" src="./Pics/pic4.jpg" alt="No pic found" />
+      <img class="image" src="./Pics/pic4.jpg" alt="No pic found" />
+      <div class="pic-box">
+        <div class="search sfirst">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <div class="search">
+          <i class="fa-solid fa-link"></i>
+        </div>
+      </div>
     </div>
 
     <div class="container">
@@ -167,10 +206,108 @@
       </div>
     </div>
 
+    <div class="bottom-bar">
+      <img class="end-car" src="./Pics/footer.png" alt="  No pic found" />
+      <img class="end-pic" src="./Pics/footer3.jpg" alt="  No pic found" />
+      <div class="end-content">
+        <div class="section latest">
+          <h2>Latest Comments</h2>
+          <li class="date-circle">
+            <div class="date-sec">
+              <div class="circle"></div>
+              <span class="date">December 31, 2014</span>
+            </div>
+
+            <p class="comment">
+              <i class="fa-solid fa-user"></i> Sara commented on
+              <a href=""
+                >Vestibulum ante ipsum primis in nulla orcinec cursus consequat
+                lacus
+              </a>
+            </p>
+          </li>
+        </div>
+        <div class="section">
+          <h2>Useful links</h2>
+          <ul class="links">
+            <li>
+              <a href="https://themes.muffingroup.com/be/voyager/wp-login.php"
+                >Log in</a
+              >
+            </li>
+            <li>
+              <a href="https://themes.muffingroup.com/be/voyager/feed/"
+                >Entries feed</a
+              >
+            </li>
+            <li>
+              <a href="https://themes.muffingroup.com/be/voyager/comments/feed/"
+                >Comments feed</a
+              >
+            </li>
+            <li><a href="https://wordpress.org/">WordPress.org</a></li>
+          </ul>
+        </div>
+        <div class="section about-sec">
+          <h2>About us</h2>
+          <p class="about">
+            Interdum nulla lectus vel justo. Curabitur fringilla nisi a ex.
+          </p>
+          <p>
+            Praesent vel iaculis erat. Mauris congue tortor a aliquam sodales.
+            Duis quis odio id dolor fermentum bibendum. Nam iaculis viverra
+            urna.
+          </p>
+        </div>
+        <div class="section tag-sec">
+          <h2>Popular Tags</h2>
+          <li class="tags">
+            <a
+              class="tags-link"
+              href="https://themes.muffingroup.com/be/voyager/tag/design/"
+              >Design
+            </a>
+            <a
+              class="tags-link"
+              href="https://themes.muffingroup.com/be/voyager/tag/framework/"
+              >Framework</a
+            ><a
+              class="tags-link"
+              href="https://themes.muffingroup.com/be/voyager/tag/grid/"
+              >Grid</a
+            ><a
+              class="tags-link"
+              href="https://themes.muffingroup.com/be/voyager/tag/motion/"
+              >Motion</a
+            ><a
+              class="bigtags"
+              href="https://themes.muffingroup.com/be/voyager/tag/video/"
+              >Video</a
+            ><a
+              class="bigtags"
+              href="https://themes.muffingroup.com/be/voyager/tag/wordpress/"
+              >Wordpress</a
+            >
+          </li>
+        </div>
+      </div>
+    </div>
     <footer>
-      <img class="footer-pic" src="./Pics/footer.png" alt="  No pic found" />
-      </footer>
-
-
+      <ul class="footer-top">
+        <li>© 2025 Betheme by Muffin group |</li>
+        <li>All Rights Reserved</li>
+        <li>| Powered by WordPress</li>
+      </ul>
+      <ul class="right footer-bottom">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-vimeo-v"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-flickr"></i>
+        <i class="fa-brands fa-pinterest-p"></i>
+        <i class="fa-brands fa-linkedin-in"></i>
+        <i class="fa-solid fa-basketball"></i>
+      </ul>
+    </footer>
   </body>
 </html>
