--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./stylesheet.css" />
     <link
       rel="stylesheet"
+      href="./responsive.css"
+      media="screen and (max-width: 1000px)"
+    />
+
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
       integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous"
@@ -17,7 +23,7 @@
   <body>
     <header>
       <ul class="left">
-        <li class="list">Quick Contact</li>
+        <li class="list contact">Quick Contact</li>
         <li class="list">
           <i class="fa-solid fa-phone"></i> +61 (0) 3 8376 6284
         </li>
@@ -38,36 +44,40 @@
     </header>
 
     <div class="stickyheader">
-    <div class="logo">
-      <img class="logo-img" src="./Pics/logo.png" alt="No pic found" />
+      <div class="logo">
+        <img class="logo-img" src="./Pics/logo.png" alt="No pic found" />
+      </div>
+
+      <div class="bars">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+
+      <ul class="top-bar">
+        <div class="box" id="home">
+          <li class="l first">Home</li>
+          <li class="l second">BeVoyager</li>
+        </div>
+        <div class="box">
+          <li class="l first">About us</li>
+          <li class="l second">Our history</li>
+        </div>
+        <div class="box">
+          <li class="l first">Blog</li>
+          <li class="l second">What's new</li>
+        </div>
+        <div class="box">
+          <li class="l first">Places</li>
+          <li class="l second">We have been</li>
+        </div>
+        <div class="box">
+          <li class="l first">Contact</li>
+          <li class="l second">Stay in touch</li>
+        </div>
+      </ul>
     </div>
 
-    <ul class="top-bar">
-      <div class="box" id="home">
-        <li class="l first">Home</li>
-        <li class="l second">BeVoyager</li>
-      </div>
-      <div class="box">
-        <li class="l first">About us</li>
-        <li class="l second">Our history</li>
-      </div>
-      <div class="box">
-        <li class="l first">Blog</li>
-        <li class="l second">What's new</li>
-      </div>
-      <div class="box">
-        <li class="l first">Places</li>
-        <li class="l second">We have been</li>
-      </div>
-      <div class="box">
-        <li class="l first">Contact</li>
-        <li class="l second">Stay in touch</li>
-      </div>
-    </ul>
-</div>
-
     <div class="bg">
-      <img src="./Pics/bg.jpg" alt="  No Pic found">
+      <img src="./Pics/bg.jpg" alt="  No Pic found" />
     </div>
 
     <div class="content">
@@ -96,6 +106,10 @@
     </div>
 
     <div class="container">
+      <div class="likes">
+        <i class="fa-regular fa-heart"></i>
+        <span>104</span>
+      </div>
       <div class="text">
         <h1>
           Vestibulum ante ipsum primis in nulla orcinec cursus consequat lacus
@@ -128,6 +142,10 @@
     </div>
 
     <div class="container">
+      <div class="likes">
+        <i class="fa-regular fa-heart"></i>
+        <span>104</span>
+      </div>
       <div class="text">
         <h1>Vestibulum commodo volutpat laoreet</h1>
       </div>
@@ -158,6 +176,10 @@
     </div>
 
     <div class="container">
+      <div class="likes">
+        <i class="fa-regular fa-heart"></i>
+        <span>104</span>
+      </div>
       <div class="text">
         <h1>
           Vivamus sit amet metus sem uspendisse a pellentesque dui non felis
@@ -190,6 +212,10 @@
     </div>
 
     <div class="container">
+      <div class="likes">
+        <i class="fa-regular fa-heart"></i>
+        <span>104</span>
+      </div>
       <div class="text">
         <h1>Quisque lorem tortor fringilla</h1>
       </div>
@@ -211,7 +237,7 @@
       <img class="end-pic" src="./Pics/footer3.jpg" alt="  No pic found" />
       <div class="end-content">
         <div class="section latest">
-          <h2>Latest Comments</h2>
+          <h3>Latest Comments</h3>
           <li class="date-circle">
             <div class="date-sec">
               <div class="circle"></div>
@@ -219,7 +245,8 @@
             </div>
 
             <p class="comment">
-              <i class="fa-solid fa-user"></i> Sara commented on
+              <i class="fa-solid fa-user"></i> <strong>Sara</strong> commented
+              on
               <a href=""
                 >Vestibulum ante ipsum primis in nulla orcinec cursus consequat
                 lacus
@@ -227,8 +254,8 @@
             </p>
           </li>
         </div>
-        <div class="section">
-          <h2>Useful links</h2>
+        <div class="section secLinks">
+          <h3>Useful links</h3>
           <ul class="links">
             <li>
               <a href="https://themes.muffingroup.com/be/voyager/wp-login.php"
@@ -249,7 +276,7 @@
           </ul>
         </div>
         <div class="section about-sec">
-          <h2>About us</h2>
+          <h3>About us</h3>
           <p class="about">
             Interdum nulla lectus vel justo. Curabitur fringilla nisi a ex.
           </p>
@@ -260,7 +287,7 @@
           </p>
         </div>
         <div class="section tag-sec">
-          <h2>Popular Tags</h2>
+          <h3>Popular Tags</h3>
           <li class="tags">
             <a
               class="tags-link"
@@ -292,11 +319,18 @@
         </div>
       </div>
     </div>
+
     <footer>
       <ul class="footer-top">
-        <li>© 2025 Betheme by Muffin group |</li>
-        <li>All Rights Reserved</li>
-        <li>| Powered by WordPress</li>
+        <li>
+          © 2025 Betheme by <a class="footerlink" href="">Muffin group </a> |
+          All Rights Reserved | Powered by
+          <a
+            class="footerlink"
+            href="https://themes.muffingroup.com/be/voyager/tag/wordpress/"
+            >WordPress</a
+          >
+        </li>
       </ul>
       <ul class="right footer-bottom">
         <i class="fa-brands fa-facebook-f"></i>
