--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
     </header>
 
     <div class="stickyheader">
-      <div class="logo">
-        <img class="logo-img" src="./Pics/logo.png" alt="No pic found" />
-      </div>
-
-      <div class="bars">
-        <i class="fa-solid fa-bars"></i>
+      <div class="logo-section">
+        <div class="logo">
+          <img class="logo-img" src="./Pics/logo.png" alt="No pic found" />
+        </div>
+        
+        <div class="bars">
+          <i onclick="shownavbar()" class="fa-solid fa-bars"></i>
+        </div>
       </div>
 
       <ul class="top-bar">
@@ -343,5 +345,7 @@
         <i class="fa-solid fa-basketball"></i>
       </ul>
     </footer>
+
+    <script src="./script.js"></script>
   </body>
 </html>
