--- a/index.html
+++ b/index.html
@@ -346,6 +346,6 @@
       </ul>
     </footer>
 
-    <script src="./script.js" defer></script>
+    <script src="./script.js" ></script>
   </body>
 </html>
