--- a/index.html
+++ b/index.html
@@ -20,68 +20,8 @@
     />
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
   </head>
-  <body>
-    <header>
-      <ul class="left">
-        <li class="list contact">Quick Contact</li>
-        <li class="list">
-          <i class="fa-solid fa-phone"></i> +61 (0) 3 8376 6284
-        </li>
-        <li class="list">
-          <i class="fa-solid fa-envelope"></i> noreply@envato.com
-        </li>
-      </ul>
-      <ul class="right">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-vimeo-v"></i>
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-flickr"></i>
-        <i class="fa-brands fa-pinterest-p"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-solid fa-basketball"></i>
-      </ul>
-    </header>
-
-    <div class="stickyheader">
-      <div class="logo-section">
-        <div class="logo">
-          <img class="logo-img" src="./Pics/logo.png" alt="No pic found" />
-        </div>
-        
-        <div class="bars">
-          <i onclick="shownavbar()" class="fa-solid fa-bars"></i>
-        </div>
-      </div>
-
-      <ul class="top-bar">
-        <div class="box" id="home">
-          <li class="l first">Home</li>
-          <li class="l second">BeVoyager</li>
-        </div>
-        <div class="box">
-          <li class="l first">About us</li>
-          <li class="l second">Our history</li>
-        </div>
-        <div class="box">
-          <li class="l first">Blog</li>
-          <li class="l second">What's new</li>
-        </div>
-        <div class="box">
-          <li class="l first">Places</li>
-          <li class="l second">We have been</li>
-        </div>
-        <div class="box">
-          <li class="l first">Contact</li>
-          <li class="l second">Stay in touch</li>
-        </div>
-      </ul>
-    </div>
-
-    <div class="bg">
-      <img src="./Pics/bg.jpg" alt="  No Pic found" />
-    </div>
-
+<body>
+    <div id="header"></div>
     <div class="content">
       <h1>
         <p class="firstLine">Discover the wildest and breathtaking corners</p>
@@ -234,117 +174,7 @@
       </div>
     </div>
 
-    <div class="bottom-bar">
-      <img class="end-car" src="./Pics/footer.png" alt="  No pic found" />
-      <img class="end-pic" src="./Pics/footer3.jpg" alt="  No pic found" />
-      <div class="end-content">
-        <div class="section latest">
-          <h3>Latest Comments</h3>
-          <li class="date-circle">
-            <div class="date-sec">
-              <div class="circle"></div>
-              <span class="date">December 31, 2014</span>
-            </div>
-
-            <p class="comment">
-              <i class="fa-solid fa-user"></i> <strong>Sara</strong> commented
-              on
-              <a href=""
-                >Vestibulum ante ipsum primis in nulla orcinec cursus consequat
-                lacus
-              </a>
-            </p>
-          </li>
-        </div>
-        <div class="section secLinks">
-          <h3>Useful links</h3>
-          <ul class="links">
-            <li>
-              <a href="https://themes.muffingroup.com/be/voyager/wp-login.php"
-                >Log in</a
-              >
-            </li>
-            <li>
-              <a href="https://themes.muffingroup.com/be/voyager/feed/"
-                >Entries feed</a
-              >
-            </li>
-            <li>
-              <a href="https://themes.muffingroup.com/be/voyager/comments/feed/"
-                >Comments feed</a
-              >
-            </li>
-            <li><a href="https://wordpress.org/">WordPress.org</a></li>
-          </ul>
-        </div>
-        <div class="section about-sec">
-          <h3>About us</h3>
-          <p class="about">
-            Interdum nulla lectus vel justo. Curabitur fringilla nisi a ex.
-          </p>
-          <p>
-            Praesent vel iaculis erat. Mauris congue tortor a aliquam sodales.
-            Duis quis odio id dolor fermentum bibendum. Nam iaculis viverra
-            urna.
-          </p>
-        </div>
-        <div class="section tag-sec">
-          <h3>Popular Tags</h3>
-          <li class="tags">
-            <a
-              class="tags-link"
-              href="https://themes.muffingroup.com/be/voyager/tag/design/"
-              >Design
-            </a>
-            <a
-              class="tags-link"
-              href="https://themes.muffingroup.com/be/voyager/tag/framework/"
-              >Framework</a
-            ><a
-              class="tags-link"
-              href="https://themes.muffingroup.com/be/voyager/tag/grid/"
-              >Grid</a
-            ><a
-              class="tags-link"
-              href="https://themes.muffingroup.com/be/voyager/tag/motion/"
-              >Motion</a
-            ><a
-              class="bigtags"
-              href="https://themes.muffingroup.com/be/voyager/tag/video/"
-              >Video</a
-            ><a
-              class="bigtags"
-              href="https://themes.muffingroup.com/be/voyager/tag/wordpress/"
-              >Wordpress</a
-            >
-          </li>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-      <ul class="footer-top">
-        <li>
-          © 2025 Betheme by <a class="footerlink" href="">Muffin group </a> |
-          All Rights Reserved | Powered by
-          <a
-            class="footerlink"
-            href="https://themes.muffingroup.com/be/voyager/tag/wordpress/"
-            >WordPress</a
-          >
-        </li>
-      </ul>
-      <ul class="right footer-bottom">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-vimeo-v"></i>
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-flickr"></i>
-        <i class="fa-brands fa-pinterest-p"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-solid fa-basketball"></i>
-      </ul>
-    </footer>
+      <div id="footer"></div>
 
     <script src="./script.js" ></script>
   </body>
