--- a/header.html
+++ b/header.html
@@ -58,11 +58,11 @@
                 <li class="l second">Our history</li>
             </div>
             <div class="box">
-                <li class="l first"><a href="./checkout.html">Blog</a></li>
+                <li class="l first"><a href="./cv.html">My CV</a></li>
                 <li class="l second">What's new</li>
             </div>
             <div class="box">
-                <li class="l first"><a href="./buynow.html">Places</a></li>
+                <li class="l first"><a href="./mycheckout.html">Checkout</a></li>
                 <li class="l second">We have been</li>
             </div>
             <div class="box">
