--- a/header.html
+++ b/header.html
@@ -62,7 +62,7 @@
                 <li class="l second">What's new</li>
             </div>
             <div class="box">
-                <li class="l first"><a href="./mycheckout.html">Checkout</a></li>
+                <li class="l first"><a href="./buynow.html">Buy Now</a></li>
                 <li class="l second">We have been</li>
             </div>
             <div class="box">
