--- a/cart.html
+++ b/cart.html
@@ -50,8 +50,8 @@
 
         <p class="text-center my-2 border p-3"><em>Price is in US dollars and excludes tax and handling fees</em></p>
         <div class="d-flex justify-content-between mt-4">
-          <a href="/buynow.html" class="btn btn-light border" >Keep Browsing</a>
-          <a href="/mycheckout.html" class="btn btn-success" >Go to Checkout</a>
+          <a href="./buynow.html" class="btn btn-light border" >Keep Browsing</a>
+          <a href="./mycheckout.html" class="btn btn-success" >Go to Checkout</a>
         </div>
       </div>
     </div>
