--- a/header.html
+++ b/header.html
@@ -59,11 +59,11 @@
             </div>
             <div class="box">
                 <li class="l first"><a href="./cv.html">My CV</a></li>
-                <li class="l second">What's new</li>
+                <li class="l second">About Me</li>
             </div>
             <div class="box">
                 <li class="l first"><a href="./buynow.html">Buy Now</a></li>
-                <li class="l second">We have been</li>
+                <li class="l second">Buy here</li>
             </div>
             <div class="box">
                 <li class="l first"><a href="./contact.html">Contact</a></li>
